--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "personal-portfolio",
   "version": "0.1.0",
+  "homepage": "https://tharitar8.github.io/portfolio2023",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
